--- a/limits-service.properties
+++ b/limits-service.properties
@@ -3,3 +3,5 @@ limits-service.maximum=888
 
 
 management.endpoints.web.exposure.include=refresh
+# Connect to Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
