--- a/spring-cloud-gateway-project.properties
+++ b/spring-cloud-gateway-project.properties
@@ -2,3 +2,8 @@ server.port=8765
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+
+# Unlock the Gateway management endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.gateway.enabled=true
