--- a/spring-cloud-gateway-project.properties
+++ b/spring-cloud-gateway-project.properties
@@ -3,6 +3,9 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+# 2. THE FIX: Automatically strip the service name from the path for EVERY app
+# This turns '/limits-service/limits' into just '/limits'
+spring.cloud.gateway.discovery.locator.filters[0]=RewritePath=/(?<selection>.*)/(?<remaining>.*), /${remaining}
 
 # Unlock the Gateway management endpoints
 management.endpoints.web.exposure.include=*
