--- a/spring-cloud-gateway-project.properties
+++ b/spring-cloud-gateway-project.properties
@@ -5,8 +5,8 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # 2. THE FIX: Automatically strip the service name from the path for EVERY app
 # This turns '/limits-service/limits' into just '/limits'
-spring.cloud.gateway.discovery.locator.filters[0]=RewritePath=/(?<selection>.*)/(?<remaining>.*), /${remaining}
-
+# Updated filter to avoid SpEL parsing errors
+spring.cloud.gateway.discovery.locator.filters[0]=RewritePath=/limits-service/(?<remaining>.*), /${remaining}
 # Unlock the Gateway management endpoints
 management.endpoints.web.exposure.include=*
 management.endpoint.gateway.enabled=true
