--- a/spring-cloud-gateway-project.properties
+++ b/spring-cloud-gateway-project.properties
@@ -6,7 +6,10 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 # 2. THE FIX: Automatically strip the service name from the path for EVERY app
 # This turns '/limits-service/limits' into just '/limits'
 # Updated filter to avoid SpEL parsing errors
-spring.cloud.gateway.discovery.locator.filters[0]=RewritePath=/limits-service/(?<remaining>.*), /${remaining}
+# Replace RewritePath with StripPrefix
+# This removes the first part of the path (e.g., /limits-service) 
+# and sends the rest to the microservice.
+spring.cloud.gateway.discovery.locator.filters[0]=StripPrefix=1
 # Unlock the Gateway management endpoints
 management.endpoints.web.exposure.include=*
 management.endpoint.gateway.enabled=true
