--- a/spring-cloud-gateway-project.properties
+++ b/spring-cloud-gateway-project.properties
@@ -1,5 +1,6 @@
 server.port=8765
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# If EUREKA_SERVER is provided by Docker, use it. Otherwise, use localhost.
+eureka.client.service-url.defaultZone=http://${EUREKA_SERVER:localhost}:8761/eureka/
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
