--- a/limits-service.properties
+++ b/limits-service.properties
@@ -4,4 +4,4 @@ limits-service.maximum=888
 
 management.endpoints.web.exposure.include=refresh
 # Connect to Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://${EUREKA_SERVER:localhost}:8761/eureka/
