--- a/spring-cloud-gateway-project.properties
+++ b/spring-cloud-gateway-project.properties
@@ -10,7 +10,11 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 # Replace RewritePath with StripPrefix
 # This removes the first part of the path (e.g., /limits-service) 
 # and sends the rest to the microservice.
-spring.cloud.gateway.discovery.locator.filters[0]=StripPrefix=1
-# Unlock the Gateway management endpoints
+# 2. Fix the Filter Syntax (Try without indices first for simplicity)
+spring.cloud.gateway.discovery.locator.filters[0].name=StripPrefix
+spring.cloud.gateway.discovery.locator.filters[0].args.parts=1
+
+# 3. Actuator Exposure (Ensure NO spaces after the asterisk)
 management.endpoints.web.exposure.include=*
 management.endpoint.gateway.enabled=true
+management.endpoints.web.base-path=/actuator
