--- a/spring-cloud-gateway-project.properties
+++ b/spring-cloud-gateway-project.properties
@@ -18,3 +18,7 @@ spring.cloud.gateway.discovery.locator.filters[0].args.parts=1
 management.endpoints.web.exposure.include=*
 management.endpoint.gateway.enabled=true
 management.endpoints.web.base-path=/actuator
+
+
+# 3. Explicitly allow gateway access (Security for SB 2.5+)
+management.endpoint.gateway.access=unrestricted
