--- a/spring-cloud-gateway-project.properties
+++ b/spring-cloud-gateway-project.properties
@@ -1,24 +1,21 @@
 server.port=8765
-# If EUREKA_SERVER is provided by Docker, use it. Otherwise, use localhost.
 eureka.client.service-url.defaultZone=http://${EUREKA_SERVER:localhost}:8761/eureka/
+
+# 1. Enable Auto-Discovery Routing
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-# 2. THE FIX: Automatically strip the service name from the path for EVERY app
-# This turns '/limits-service/limits' into just '/limits'
-# Updated filter to avoid SpEL parsing errors
-# Replace RewritePath with StripPrefix
-# This removes the first part of the path (e.g., /limits-service) 
-# and sends the rest to the microservice.
-# 2. Fix the Filter Syntax (Try without indices first for simplicity)
+# 2. Correct StripPrefix Syntax
+# Using 'parts' is the correct argument for the StripPrefix filter
 spring.cloud.gateway.discovery.locator.filters[0].name=StripPrefix
 spring.cloud.gateway.discovery.locator.filters[0].args.parts=1
 
-# 3. Actuator Exposure (Ensure NO spaces after the asterisk)
+# 3. Actuator Exposure
+# No spaces around '*' and explicit exposure
 management.endpoints.web.exposure.include=*
 management.endpoint.gateway.enabled=true
 management.endpoints.web.base-path=/actuator
 
-
-# 3. Explicitly allow gateway access (Security for SB 2.5+)
+# 4. Security Toggle (For Spring Boot 2.5.x)
+# This ensures the gateway endpoints aren't restricted to 'read-only'
 management.endpoint.gateway.access=unrestricted
