--- a/limits-service-dev.properties
+++ b/limits-service-dev.properties
@@ -1,2 +1,3 @@
-limits-service.minimum=555  
-limits-service.maximum=666
+limits-service.minimum=4
+limits-service.maximum=996
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
