--- a/limits-service-qa.properties
+++ b/limits-service-qa.properties
@@ -1,2 +1,3 @@
-limits-service.minimum=10 
-limits-service.maximum=10000
+limits-service.minimum=10
+limits-service.maximum=500
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
