--- a/limits-service-dev.properties
+++ b/limits-service-dev.properties
@@ -1,3 +1,4 @@
-limits-service.minimum=4
-limits-service.maximum=996
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
+limits-service.minimum=10
+limits-service.maximum=500
